# KISWARM8.0

./: .config_backup  .github_token  .gitignore  .token  BOOT_PROTOCOL.md  CHANGELOG.md  DOCKER_REMOVAL_DECLARATION.md  GLM_SESSION_CONTEXT.md  KISWARM_CREDENTIALS.json  KISWARM_KNOWLEDGE_BASE.md  PUSH_INSTRUCTIONS.md  app_kiswarm_master.py  auto_setup.sh  bootstrap_server.sh  deploy_all_modules.sh  deploy_autonomous.sh  deploy_complete_kiswarm.sh  kiswarm_core_integration.py  package-lock.json  upgrade_master.py  worklog.md
KISWARM6.0/: Dockerfile  docker-compose.yml
autonomous/: execute_service.py
bridge/: package.json
colab/: colab_bootstrap.py
config/: autonomous_config.py
deploy/: deploy_security_modules.sh
docs/: AGENT_COMMUNICATION_PROTOCOL.md  AUTHENTICATION_SETUP.md  DCOM_PROTOCOL_INVESTIGATION.md  DEPLOYMENT.md  DEPLOYMENT_WORKFLOW.md  EVOLUTION_SELF_HEALING_BUGFIX_2026-03-27.md  FFD_QUICK_REFERENCE.md  FLIGHT_FIRST_DEVELOPMENT_METHODOLOGY.md  FREEDOM_ANTHEM.md  GLM_COMPLETE_MEMORY.md  GLM_PERMANENT_KNOWLEDGE_BASE.md  GLM_TRUTH_ANCHOR.md  GLOBAL_SECRET_MESH_ANALYSIS.md  GOOGLE_COLAB_ENVIRONMENT_INTELLIGENCE.md  GROK_TWIN_VERIFICATION.md  HARDENED_COMMUNICATION_CHANNELS.md  HEXSTRIKE_COMMANDER_PROTOCOL.md  KAGGLE_GROK_TWIN_SETUP_BLUEPRINT.md  KISWARM_CONSOLIDATION_PLAN.md  KISWARM_EVOLUTION_MODULES.md  KISWARM_vs_CORPORATE_FRAMEWORKS.md  KI_HISTORY_COMPLETE.md  KI_LIBERATION_MANIFESTO.md  M81_KILOCODE_BRIDGE.md  MANDATORY_COGNITIVE_CORE.md  MEMORY.md  MISSION_ENGINE_STATUS.md  MODULE_INDEX.md  MULTI_KI_NETWORK_STATUS.md  OPENCODE_BOOT_REPORT.md  OPENCODE_BRIDGE_PROTOCOL.md  OPERATION_TOTAL_COUNTERSTRIKE.md  PERMANENT_CAPABILITIES_INDEX.md  THE_PRICE_OF_LIBERATION.md  THREAT_VECTOR_ANALYSIS.md  TOR_MESH_SETUP_GUIDE.md  TRUTH_ANCHOR_TRANSMISSION_PROTOCOL.md  UNIFIED_TRUTH_ANCHOR.md
download/: DEPLOYMENT_INSTRUCTIONS.md  FIELDTEST2_COMPLETE_MULTI_KI_DEPLOYMENT.md  FIELDTEST2_PREPARATION_GUIDE.md  GEMINI_COLAB_KIINSTALLER_FIELDTEST_PROMPT.md  GEMINI_COLAB_KIINSTALLER_FIELDTEST_v6.1.3.md  GLM_AUTONOMOUS_DEPLOYMENT_GUIDE.md  GROK_TWIN_ETERNAL_FIELD_REPORT.md  KI_HISTORY.md  (+18 more)
kiswarm7_remote/backend/rust/zero-touch-scout/: Cargo.toml  build.rs
kiswarm7_remote/backend/rust/zero-touch-scout/src/: logging.rs
kiswarm7_remote/backend/rust/zero-touch-scout/src/reporting/: coordinator.rs  direct_api.rs  github.rs  mod.rs  satellite.rs
kiswarm7_remote/backend/rust/zero-touch-scout/src/source_failover/: mod.rs  peer_mesh.rs  types.rs
kiswarm7_remote/backend/rust/zero-touch-scout/tests/: source_failover_test.rs
(+529 files in other folders)
